Bug 126070 - New Bullets Dialog - Preview zone not resizable + levels above 6-7 not visible with default zone size
Summary: New Bullets Dialog - Preview zone not resizable + levels above 6-7 not visibl...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Gülşah Köse
URL:
Whiteboard: target:6.4.0 target:6.3.1
Keywords:
Depends on:
Blocks: Impress-Bullet-Numbering-Dialog
  Show dependency treegraph
 
Reported: 2019-06-24 15:16 UTC by bureautiquelibre
Modified: 2019-09-17 08:14 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Preview zone doesnt resize (88.81 KB, image/png)
2019-06-24 15:16 UTC, bureautiquelibre
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bureautiquelibre 2019-06-24 15:16:04 UTC
Created attachment 152372 [details]
Preview zone doesnt resize

See screenshot, preview not visible for levels 7+ and zone doesnt resize with the dialog ...
Comment 1 Xisco Faulí 2019-07-09 14:03:44 UTC
I can't reproduce it in

Version: 6.4.0.0.alpha0+
Build ID: 7a0164f0d82d91e2ac481d74cdacfe9a7ad6080f
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Could you please try to reproduce it with a master build from http://dev-builds.libreoffice.org/daily/master/ ?
You can install it alongside the standard version.
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' if the bug is still present in the master build
Comment 2 Gülşah Köse 2019-07-17 14:02:45 UTC
I can reporoduce it in LibreOfficeDev 6.4.0.0.alpha0
Impress
Ubuntu
Comment 3 Commit Notification 2019-07-24 11:01:31 UTC
Gülşah Köse committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/9a516a4b229f9a52c9c1f05d247cebddb1ba5c17%5E%21

tdf#126070 Show scroll bars when preview overflows.

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2019-07-25 13:06:13 UTC
Gülşah Köse committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/2c202d35dac1314cc034a97786bb7f8712efa1b6%5E%21

tdf#126070 Show scroll bars when preview overflows.

It will be available in 6.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.