tdf#126070 Show scroll bars when preview overflows.

Change-Id: Ibb904fc1c5d283d8ca9d8ff8b2249d25d7091b5b